--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -22,5 +22,9 @@
   <%= f.label :description, "Description" %>
   <%= f.text_area :description %>
 
+  <%= f.label :image, "Photo" %>
+  <%= image_tag @restaurant.image, width: '300px' if @restaurant.image? %>
+  <%= f.file_field :image %>
+
   <%= f.submit %>
 <% end %>
