--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -5,7 +5,8 @@
     <%= restaurant.name %>
     <%= link_to 'Show', admin_restaurant_path(restaurant) %>
     <%= link_to 'Edit', edit_admin_restaurant_path(restaurant) %>
-    <%= link_to 'Delete', admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
+    <%= link_to 'Delete', admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %><br>
+    <%= image_tag restaurant.image, width: '300px' %>
   </li>
   <% end %>
 </ul>
