--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,25 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+//title
+.title{
+  border: 2px solid black;
+  position: fixed;
+  padding: 5px;
+  top: 0;
+  width: 100%;
+  height: 5%;
+  text-align: center;
+}
+//content
+.content{
+  border: 2px solid red;
+  text-align: center;
+}
+.f-b{
+  border: 2px solid green;
+  background-color: LightSlateGrey ;
+  padding: 8px;
+}
+.res-place{
+  border: 2px solid yellow;
+}
