--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -19,7 +19,7 @@
       <% end %>
     </div>
     <br><br>
-    <div class="container content">
+    <div class="container content2">
       <h1 class="f-b">Restaurant Front-Extrance</h1>
       <div class="row">
         <% @restaurants.each do |restaurant| %>
