--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -1,30 +1,58 @@
-<% if @restaurant.errors.any? %>
-  <h2>We have some errors here !</h2>
-  <ul>
-    <% @restaurant.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <% if @restaurant.errors.any? %>
+      <h2>We have some errors here !</h2>
+      <ul>
+        <% @restaurant.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
-<% end %>
-<%= form_for  [:admin, @restaurant] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
+    <%=render :partial=>'title'%>
+    <br><br>
+    <div class="form container content">
+      <h1 class="f-b content2">Restaurant Back-Extrance</h1>
+      <%= form_for  [:admin, @restaurant] do |f| %>
+        <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: true}, {class: "form-control form-select"} %>
+        <br>
+        <div class="form-group">
+          <%= f.label :name, "Name" %>
+          <%= f.text_field :name %>
+        </div>
 
-  <%= f.label :tel, "Tel" %>
-  <%= f.text_field :tel %>
+        <div class="form-group">
+          <%= f.label :tel, "Tel" %>
+          <%= f.text_field :tel %>
+        </div>
 
-  <%= f.label :address, "Address" %>
-  <%= f.text_field :address %>
+        <div class="form-group">
+          <%= f.label :address, "Address" %>
+          <%= f.text_field :address %>
+        </div>
 
-  <%= f.label :opening_hours, "Opening Hours" %>
-  <%= f.text_field :opening_hours %>
+        <div class="form-group">
+          <%= f.label :opening_hours, "Opening Hours" %>
+          <%= f.text_field :opening_hours %>
+        </div>
 
-  <%= f.label :description, "Description" %>
-  <%= f.text_area :description %>
+        <div class="form-group">
+          <%= f.label :description, "Description" %>
+          <%= f.text_area :description %>
+        </div>
 
-  <%= f.label :image, "Photo" %>
-  <%= image_tag @restaurant.image, width: '300px' if @restaurant.image? %>
-  <%= f.file_field :image %>
+        <div class="form-group">
+          <%= f.label :image, "Photo" %>
+          <%= image_tag @restaurant.image, width: '300px' if @restaurant.image? %>
+          <%= f.file_field :image %>
+        </div>
 
-  <%= f.submit %>
-<% end %>
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </body>
+</html>
