--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -9,6 +9,10 @@
     <br><br>
     <div class="container content">
       <h1 class="f-b content2">Restaurant Back-Extrance</h1>
+      <div>
+        <%= link_to 'Restaurant', admin_restaurants_path %> |
+        <%= link_to 'Categories', admin_categories_path %>
+      </div>
       <div class="row">
         <div class="col-md-12">
 
