--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -31,16 +31,19 @@
             <tr>
               <th>#</th>
               <th>Category Name</th>
+              <th>*</th>
             </tr>
           </thead>
           <tbody>
             <% @categories.each do |category| %>
             <tr>
               <th scope="row"><%= category.id %></th>
-              <td><%= category.name %></td>
+              <th><%= category.name %></th>
+              <th><%= link_to 'Edit', admin_categories_path(id: category.id) %></th>
             </tr>
             <% end %>
           </tbody>
+
         </table>
       </div>
     </div>
