user can delete category with link on index page

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -39,7 +39,10 @@
             <tr>
               <th scope="row"><%= category.id %></th>
               <th><%= category.name %></th>
-              <th><%= link_to 'Edit', admin_categories_path(id: category.id) %></th>
+              <th>
+                <%= link_to 'Edit', admin_categories_path(id: category.id) %>
+                <%= link_to 'Delete', admin_category_path(category), method: :delete, data: { confirm: "Are you sure?"} %>
+              </th>
             </tr>
             <% end %>
           </tbody>
