--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -23,6 +23,16 @@
     <div class="clearfix"></div>
     <hr>
   </div>
+  <% @restaurant.comments.each do |comment| %>
+    <div>
+      <h4><%= comment.user.email.split("@")[0] %></h4>
+      <p><%= simple_format comment.content %></p>
+      <p class="text-muted">
+        <em><%= time_ago_in_words(comment.created_at) %> </em>
+      </p>
+    </div>
+    <hr>
+  <% end %>
 </div>
 <div class="container">
   <div class="row">
