--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,48 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <div class="title">
-      <% if current_user %>
-        Hi, <%= current_user.email %>
-        <%= link_to('登出', destroy_user_session_path, method: :delete) %> |
-        <%= link_to('修改密碼', edit_user_registration_path) %>
-        <%if current_user.role=="admin"%>
-          |<%= link_to('Background', admin_root_path) %>
-        <%end%>
-      <% else %>
-        <%= link_to('註冊', new_user_registration_path) %> |
-        <%= link_to('登入', new_user_session_path) %>
+<%= render partial: "share/title" %>
+<br><br>
+  <div class="container content2">
+    <h1 class="f-b">Restaurant Front-Extrance</h1>
+    <ul class="nav nav-pills">
+      <li role="presentation" class="active"><%= link_to "全部餐廳", root_path %></li>
+      <% @categories.each do |category| %>
+        <li role="presentation"><%= link_to category.name, category_path(category) %></li>
       <% end %>
-    </div>
-    <br><br>
-    <div class="container content2">
-      <h1 class="f-b">Restaurant Front-Extrance</h1>
-      <ul class="nav nav-pills">
-        <li role="presentation" class="active"><%= link_to "全部餐廳", root_path %></li>
-        <% @categories.each do |category| %>
-          <li role="presentation"><%= link_to category.name, category_path(category) %></li>
-        <% end %>
-      </ul>
-      <div class="row">
-        <% @restaurants.each do |restaurant| %>
-          <div class="res-place col-xs-12 col-sm-6 col-md-4">
-            <%= image_tag restaurant.image, class: "img-responsive center-block" %>
-            <div class="caption">
-              <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
-              <p class="label label-default"><%= restaurant.category.name %><p>
-              <p><%= truncate(restaurant.description, length: 80) %></p>
-            </div>
-          </div>
-        <% end %>
-      </div>
-      <div class="text-center">
-        <%= paginate @restaurants %>
-      </div>
-    </div>
-
-  </body>
-</html>
+    </ul>
+    <%= render partial: "share/restaurant_list" %>
+  </div>
