--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment_nav{
+	font-size: 1cm;
+	color: azure;
+	text-align: left;
+}
+.my-restaurant{
+	border: 1px solid black;
+	height: 200px;
+	width: 200px;
+	margin: 10px;
+	float: left;
+}
+.img{
+	margin: 10px;
+	height: 120px;
+	max-width: 160px;
+}
