user can view recent restaurants and comments on feeds page

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the restaurants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//feeds
+.feeds{
+    float: left;
+    width: 50%;
+    text-align: left;
+}
+
+//feeds-left-div
+.feeds-left{
+    
+}
+
+//feeds-right-div
+.feeds-right{
+    
+}
