--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,7 +20,9 @@
       <%= simple_format @restaurant.description %>
     </div>
 
-    <div class="clearfix"></div>
+    <div class="btn btn-default">
+      <%= link_to"Dashboard", dashboard_restaurant_path %>
+    </div>
     <hr>
   </div>
   <% @restaurant.comments.each do |comment| %>
