--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -22,8 +22,7 @@
 
     <div>
       <%= link_to"Dashboard", dashboard_restaurant_path, class: "btn btn-primary" %>
-      <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
-      <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-info" %>
+      <%= render partial: "share/favorite", locals: {restaurant: @restaurant} %>
     </div>
     <hr>
   </div>
