add like buttom by favorite

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -23,6 +23,7 @@
     <div>
       <%= link_to"Dashboard", dashboard_restaurant_path, class: "btn btn-primary" %>
       <%= render partial: "share/favorite", locals: {restaurant: @restaurant} %>
+      <%= render partial: "share/like", locals: {restaurant: @restaurant} %>
     </div>
     <hr>
   </div>
