--- a/app/views/share/_restaurant_list.html.erb
+++ b/app/views/share/_restaurant_list.html.erb
@@ -7,6 +7,7 @@
             <p class="label label-default"><%= restaurant.category.name %><p>
             <p><%= truncate(restaurant.description, length: 80) %></p>
             <%= render partial: "share/favorite", locals: {restaurant: restaurant} %>
+            <%= render partial: "share/like", locals: {restaurant: restaurant} %>
         </div>
         </div>
     <% end %>
