put followship in restaurant page and styled user index page

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -9,12 +9,11 @@
     text-align: left;
 }
 
-//feeds-left-div
-.feeds-left{
-    
-}
-
-//feeds-right-div
-.feeds-right{
-    
+//followship
+.follow-people{
+    border: 2px solid yellow;
+    display: inline;
+    float: left;
+    width: 150px;
+    height: 150px;
 }
