--- a/app/views/restaurants/feeds.html.erb
+++ b/app/views/restaurants/feeds.html.erb
@@ -1,9 +1,6 @@
 <div class="container content2">
   <h1 class="f-b">餐廳最新動態</h1>
-  <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><%= link_to "首頁", root_path %></li>
-    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
-  </ul>
+  <%= render partial: "share/nav" %>
   <div class="feeds-left feeds">
     <h3>最新餐廳</h3>
 
