--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,10 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.comment_nav{
-	font-size: 1cm;
-	color: azure;
-	text-align: left;
+.comment{
+	width: 70%;
+	float: right;
+	nav{
+		font-size: 0.7cm;
+		text-align: left;
+	}
+}
+.follower{
+	width: 30%;
+	float: left;
+	nav{
+		font-size: 0.7cm;
+		text-align: left;
+	}
 }
 .my-restaurant{
 	border: 1px solid black;
@@ -18,4 +29,23 @@
 	margin: 10px;
 	height: 120px;
 	max-width: 160px;
+}
+.avatar{
+	border: 1px solid red;
+	width: 30%;
+	height: 300px;
+	margin: 10px;
+	display: inline;
+	float: left;
+}
+.profile-content{
+	float: left;
+	text-align: left;
+	width: 60%;
+	margin-top: 10px;
+	border: 1px solid blue;
+	font-size: 0.5cm;
+	p{
+		font-size: 1cm
+	}
 }
